# typepulse

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
src/: App.css  App.tsx  main.tsx  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_config.rs  collector.rs  command.rs  lib.rs  main.rs  storage.rs
src-tauri/src/collector/: context.rs  events.rs  io.rs  listener.rs  modifier.rs  shortcut.rs  state_api.rs
src/components/: AppTable.tsx  FilterBar.tsx  LogsPage.tsx  MetricsGrid.tsx  PageHeader.tsx  SettingsPage.tsx  Sidebar.tsx  StatsPage.tsx  StatusCard.tsx  TrendChart.tsx
src/components/layout/: PageHeader.tsx  Sidebar.tsx
src/components/logview/: LogsPage.tsx
src/components/settings/: CaptureSettingsSection.tsx  DisplaySettingsSection.tsx  SettingsContext.tsx  StorageSettingsSection.tsx  types.ts
src/components/settings/page/: SettingsPage.tsx
src/components/stats/: AppTable.tsx  ContributionHeatmap.tsx  DailyTopKeysPanel.tsx  FilterBar.tsx  MetricsGrid.tsx  ShortcutUsagePanel.tsx  StatsPage.tsx  StatusCard.tsx  TrendChart.tsx  contributionTheme.ts
src/components/tray/: TrayPopover.tsx
src/styles/: glass.ts
src/utils/: contribution.ts  shortcutMap.ts  stats.ts
