[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
name = "typepulse"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "typepulse_lib"

[build-dependencies]
tauri-build = {version = "2", features = []}

[dependencies]
active-win-pos-rs = "0.8"
chrono = {version = "0.4", features = ["clock"]}
rdev = "0.5"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tauri = {version = "2", features = ["tray-icon", "image-png"]}
tauri-plugin-opener = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
plist = "1"
